# spineguard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  install.sh  pyproject.toml  uninstall.sh
data/: com.spineguard.app.metainfo.xml  spineguard.desktop
debian/: changelog  control  copyright  rules
docs/plans/: 2026-02-23-progressive-routines-design.md  2026-02-23-progressive-routines-plan.md
spineguard/: __init__.py  app.py  config.py  idle.py  micro_overlay.py  notifications.py  overlay.py  routines.py  screen_lock.py  settings.py  sounds.py  stats.py  style.css  timers.py  tips.py  tray.py  tray_subprocess.py
